models/tests/errors/syntactic/recordinline.ucl
// UCLID TEST
// Solver=cvc4
// Result=None

module main {
  var a, b : integer;

  var c : record {k: integer, m: boolean};

  init {
    a = 0;
    b = 1;
  }

  next {
    a' = b;
    b' = a + b;
  }

  invariant a_le_b: a <= b;

  control {
    induction;
  }
}